# 3D-LV

./: README.md  capture_frames.py  dataset.py  serial_angle.py  serial_conv.ino  serial_send.py  stream_video.py
Arduino/serial_conv/: serial_conv.ino
DPD-Project-master/Source codes/: Demo_DPD.asv
Datasets/cube/: 12_file.csv
Datasets/cube copy/: 0_file.csv  10_file.csv  12_file.csv  12_points.csv  14_file.csv  2_file.csv  4_file.csv  6_file.csv  8_file.csv
Datasets/parallelogram/: 0_file.csv  10_file.csv  12_file.csv  14_file.csv  16_file.csv  18_file.csv  20_file.csv  22_file.csv  2_file.csv  4_file.csv  6_file.csv  8_file.csv
Datasets/pentagon/: 0_file.csv  10_file.csv  4_file.csv  6_file.csv  8_file.csv  dem_points.csv
Datasets/pyramidcopy/: 0_file.csv  10_file.csv  12_file.csv  2_file.csv  4_file.csv  6_file.csv  8_file.csv
Datasets/tPrism/: 0_file.csv  10_file.csv  12_file.csv  14_file.csv  16_file.csv  18_file.csv  20_file.csv  22_file.csv  2_file.csv  49_points.csv56_points.csv  4_file.csv  54_points.csv  6_file.csv  8_file.csv  8_goodpoints.csv  new_points.csv
Datasets/user/: 0_depth_Depth.raw  0_depth_Depth_metadata.csv  1_depth_Depth.raw  1_depth_Depth_metadata.csv  2__Depth.raw  2__Depth_metadata.csv  (+2 more)
MAIN/: createMask.py  create_masks.py  cropimages.py  extractPolygons.py  fit_ellipse.py  joinPolygons.py  main.py  main_points.py  normal2.py
Normals/: normals.cpp  normals.py
Plane-Segmentation/CAPE-master/CAPE/: CMakeLists.txt
Working Matlab extract polygons/: RGB_AnalysisWORKING.m  find_paramaters.m
serial_conv/: serial_conv.ino
(+49 files in other folders)
